fix gap on cards

--- a/src/styles/_whatsnew.scss
+++ b/src/styles/_whatsnew.scss
@@ -1,3 +1,9 @@
+body:not(.loading){
+	.wn-cards__card--hide {
+		transform: translateY(25%);
+	}
+}
+
 .wn-cards {
 	color: black;
 	margin: 0 auto;
@@ -32,9 +38,7 @@
 		transform: translateY(0);
 		transition: transform 1.5s ease;
 		
-		&--hide {
-			transform: translateY(25%);
-		}
+		
 	}
 }
 
