--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -622,6 +622,10 @@ section {
     -webkit-transform: scale(1);
   }
 }
+body:not(.loading) .wn-cards__card--hide {
+  transform: translateY(25%);
+}
+
 .wn-cards {
   color: black;
   margin: 0 auto;
@@ -651,9 +655,6 @@ section {
   padding-bottom: 60px;
   transform: translateY(0);
   transition: transform 1.5s ease;
-}
-.wn-cards__card--hide {
-  transform: translateY(25%);
 }
 
 .wn-grid {
